<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoffeeNerd</string>
    <string name="greeting">Developed by HashBang Software</string>
    <string name="email">hashbangsoftware@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="resetButtonLabel">Reset</string>
    <string name="startButtonLabel">Start</string>
    <string name="timerVal">00:00</string>
    <string-array name="coffee_options">
        <item>French Press</item>
        <item>Chemex</item>
        <item>Siphon Pot</item>
        <item>AeroPress</item>
        <item>Hario V60</item>
        <item>Automatic Drip</item>
        <item>Custom Timer</item>
        <item>Preferences</item>
        <item>References</item>
        <item>About</item>
    </string-array>
    <string-array name="fp_types">
        <item>Standard</item>
        <item>Dark</item>
        <item>Light</item>  
    </string-array>
        <string-array name="aero_types">
        <item>Standard</item>
        <item>Inverted</item>
    </string-array>
    <string-array name="units">
        <item>Grams</item>
        <item>Ounces</item>
    </string-array>
    <string-array name="fp_headers">
        <item>Instructions</item>
        <item>Beans Calculator</item>
        <item>Brew Timer</item>
        <item>Notes</item>    
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="fp_instruction">Instructions</string>
    <string name="fp_grounds">Grounds</string>
    <string name="volume_unit">Water Volume Unit</string>
    <string name="mass_unit">Coffee Mass Unit</string>
    <string name="grams">g</string>
    <string name="ounces">oz</string>
    <string name="ratio_label">Ratio</string>
    <string name="volume_label">Water "AndroidManifest.xml"Volume</string>
    <string name="totalCoffee">Total Coffee Weight</string>
    <string name="millilitres">ml</string>
    <string name="cups">cup</string>
    <string name="totalCups">Number of Cups</string>
    <string name="comments">Comments</string>
	<string name="refs">References</string>
    <string name="bodum_link"><a href="http://www.bodum.com">Bodum</a></string>
    <string name="chemex_link"><a href="http://www.chemexcoffeemaker.com">Chemex Coffeemaker</a></string>
    <string name="stump_link"><a href="http://stumptowncoffee.com/">StumpTown Coffee Roasters</a></string>
    <string name="hario_link"><a href="http://hario.jp/">Hario</a></string>
    <string name="save">SAVE</string>
    <string name="save_msg">Notes saved successfully</string>
    <string name="cup_warning">Note: 1 Cup = 4 fl. oz</string>
    <string name="send_email">E-mail Me!</string>
    <string name="rate">Rate Me!</string>
    <string name="donate">Support!</string>
    <string name="theme_picker">Colour Preference</string>
    <string name="dark">Dark Theme</string>
    <string name="light">Light Theme</string>
    <string name="support_greeting">Thank you for supporting\nCoffeeNerd!</string>
    <string name="btc_button">Bitcoin</string>
    <string name="paypal_button">Paypal</string>
    <string name="perspective_label">Perspective Mode</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
</resources>
