<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView android:text="@string/theme_picker"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"/>
	<RadioGroup android:id="@+id/colour_group"
	    android:orientation="horizontal"
	    android:layout_width="wrap_content" android:layout_height="wrap_content">
	    <RadioButton android:id="@+id/dark_theme"
	        android:text="@string/dark"
	        android:checked="true"/>
	    <RadioButton android:id="@+id/light_theme"
	        android:text="@string/light"/>
	</RadioGroup>
	<TextView android:text="@string/perspective_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"/>
	<RadioGroup android:id="@+id/perspective_group"
	    android:orientation="horizontal"
	    android:layout_width="wrap_content" android:layout_height="wrap_content">
	    <RadioButton android:id="@+id/portrait_option"
	        android:text="@string/portrait"
	        android:checked="true"/>
	    <RadioButton android:id="@+id/landscape_option"
	        android:text="@string/landscape"/>
	</RadioGroup>
	<TextView android:text="@string/mass_unit"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"/>
	<RadioGroup android:id="@+id/mass_group"
	    android:orientation="horizontal"
	    android:layout_width="wrap_content" android:layout_height="wrap_content">
	    <RadioButton android:id="@+id/grams"
	        android:text="@string/grams"
	        android:checked="true"/>
	    <RadioButton android:id="@+id/ounces"
	        android:text="@string/ounces"/>
	</RadioGroup>
    <TextView android:text="@string/volume_unit"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"/>
	<RadioGroup android:id="@+id/volume_group"
	    android:orientation="horizontal"
	    android:layout_width="wrap_content" android:layout_height="wrap_content">
	    <RadioButton android:id="@+id/millilitres"
	        android:text="@string/millilitres"
	        android:checked="true"/>
	    <RadioButton android:id="@+id/cups"
	        android:text="@string/cups"/>
	</RadioGroup>
	<TextView android:text="@string/cup_warning"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>