<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal" >
    
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/app_name"/>
    <TextView android:text="@string/greeting" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView android:text="@string/email" android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/space1"
        android:layout_width="wrap_content"
        android:layout_height="40sp" />
    
    <TextView android:text="@string/refs" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textSize="20sp"/>
    <TextView
	    android:id="@+id/bodum_link"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/bodum_link"/>
    <TextView android:id="@+id/chemex_link"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/chemex_link"/>
    <TextView android:id="@+id/stump_link"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/stump_link"/>
    <TextView android:id="@+id/hario_link"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/hario_link"/>
</LinearLayout>
