<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" 
        android:text="@string/support_greeting"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:padding="10dp"/>
    
	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    <Button android:id="@+id/paypal_button" android:layout_width="0dp" android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/paypal_button"/>
	    <Button android:id="@+id/btc_button" android:layout_width="0dp" android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/btc_button"/>
	</LinearLayout>
</LinearLayout>