<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="25dp">
	
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_width="0px" android:layout_height="wrap_content"
            android:text="MM:"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="right"/>
	    <SeekBar
	        android:id="@+id/timerMinuteSeekBar"
	        android:layout_width="0px"
	        android:layout_height="wrap_content" 
	        android:max="600000"
	        android:layout_weight="5"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_width="0px" android:layout_height="wrap_content"
            android:text="SS:"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="right"/>
	    <SeekBar
	        android:id="@+id/timerSecondSeekBar"
	        android:layout_width="0px"
	        android:layout_height="wrap_content" 
	        android:max="60000"
	        android:layout_weight="5"/>
    </LinearLayout>
    <TextView
        android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#ffffff"
        android:text="@string/timerVal" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
		<Button
		        android:id="@+id/startButton"
		        android:layout_width="90dp"
		        android:layout_height="45dp"
		        android:text="@string/startButtonLabel" />
		<Button
		        android:id="@+id/pauseButton"
		        android:layout_width="90dp"
		        android:layout_height="45dp"
		        android:text="@string/resetButtonLabel" />
	</LinearLayout>

</LinearLayout>